[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^2.3.2"
markdown = "^3.4.4"
markdownify = "^0.11.6"
requests = "^2.31.0"
werkzeug = "^2.3.7"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"